- Reached peace on JavaFX/11: now working via application/run and build/runtime Gradle tasks, when platform jmods are present in <JDK_HOME>/jmods.